Removing ballerina word from primitives HTML heading

--- a/templates/html/primitives.hbs
+++ b/templates/html/primitives.hbs
@@ -25,7 +25,7 @@
 				<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						    <h2>Ballerina Primitive Types</h2>
+						    <h2>Primitive Types</h2>
                             <ul>
                                 {{#each this}}
                                     <h2>{{primitiveAnnotation this "type"}}</h2>
